<resources>
    <string name="app_name">卡门</string>
    <string name="input_alias">请输入信用卡别名</string>
    <string name="input_billday">请输入信用卡账单日</string>
    <string name="input_dueday">请输入信用卡到期还款日</string>
    <string name="database_name">card.db</string>
    <string name="card_alias">别名</string>
    <string name="bill_day">账单日</string>
    <string name="due_day">到期还款日</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="recommendation">建议</string>
    <string name="mycards">我的信用卡</string>
    <string name="about">关于</string>
    <string name="my_cards">我拥有的信用卡</string>
    <string name="about_carmen">关于卡门</string>
    <string name="apropos">值得信赖的信用卡助手</string>
    <string name="about_long">卡门帮您更好地使用信用卡</string>
    <string name="contact_us">联系我们</string>
    <string name="email">意见反馈：panyongzhi@gmail.com</string>
    <string name="recommendation1">信用卡使用建议</string>
    <string name="today_tips">今日优先使用</string>
    <string name="copyright">版权所有 © 2016 永动工作室</string>
    <string name="version">版本信息: v1.0 (d41d8)</string>
    <string name="zan"> </string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-3172595803881704/5471474079</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
